--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-kinesis": "^1.1.5",
+    "vue-scrollto": "^2.17.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
